--- a/aula06/ex003.html
+++ b/aula06/ex003.html
@@ -23,9 +23,15 @@
 
 
   <script>
-   var n1 = window.prompt('Digite um número: ')
-   var n2 = window.prompt('Digite outro número: ')
+   var n1 = Number.parseInt(window.prompt('Digite um número: '))
+   var n2 = Number.parseInt(window.prompt('Digite outro número: '))
    var s = n1 + n2
-   window.alert('A soma dos valores é '+ s )//Concatenação
-   //+ para adição
-   //+ para concatenação
+    
+   window.alert(`A soma entre ${n1} e ${n2} é igual a ${s}`)//javaScript mais novo
+   //templet Strings 
+   
+
+   //window.alert('A soma dos valores é '+ s )//Concatenação
+   //(number + number) para adição
+   //(string + string) para concatenação
+  </script>
